feat: Added updateCredential (#308)
* Added updateCredential

* Added tests for updateCredential

* Added update credential feature to web wallet

* Added update credential to API spec

* Disable lint error

* Added test coverage

* Refactored decryptJSON

* Renamed encrypt/decrypt to encryptMessage/decryptMessage

* Sync kc-app

* Fix for acceptCredential

* Fixed update button disabled state
