# src/keymaster-api.js
@@ -377,16 +377,6 @@ v1router.post('/credentials/bind', async (req, res) => {
     }
 });
 
-v1router.post('/credentials/issue', async (req, res) => {
-    try {
-        const { credential, registry } = req.body;
-        const response = await keymaster.issueCredential(credential, registry);
-        res.json(response);
-    } catch (error) {
-        res.status(400).send({ error: error.toString() });
-    }
-});
-
 v1router.get('/credentials/held', async (req, res) => {
     try {
         const response = await keymaster.listCredentials();
@@ -454,6 +444,17 @@ v1router.get('/credentials/issued', async (req, res) => {
     }
 });
 
+v1router.post('/credentials/issued', async (req, res) => {
+    try {
+        const { credential, registry } = req.body;
+        const response = await keymaster.issueCredential(credential, registry);
+        res.json(response);
+    } catch (error) {
+        res.status(400).send({ error: error.toString() });
+    }
+});
+
+// eslint-disable-next-line
 v1router.get('/credentials/issued/:did', async (req, res) => {
     try {
         const did = req.params.did;
@@ -461,6 +462,17 @@ v1router.get('/credentials/issued/:did', async (req, res) => {
         res.json(response);
     } catch (error) {
         res.status(500).send({ error: error.toString() });
+    }
+});
+
+v1router.post('/credentials/issued/:did', async (req, res) => {
+    try {
+        const did = req.params.did;
+        const { credential } = req.body;
+        const response = await keymaster.updateCredential(did, credential);
+        res.json(response);
+    } catch (error) {
+        res.status(400).send({ error: error.toString() });
     }
 });
 
@@ -486,7 +498,7 @@ v1router.post('/keys/rotate', async (req, res) => {
 v1router.post('/keys/encrypt', async (req, res) => {
     try {
         const { msg, did } = req.body;
-        const response = await keymaster.encrypt(msg, did);
+        const response = await keymaster.encryptMessage(msg, did);
         res.json(response);
     } catch (error) {
         res.status(500).send({ error: error.toString() });
@@ -495,7 +507,7 @@ v1router.post('/keys/encrypt', async (req, res) => {
 
 v1router.post('/keys/decrypt', async (req, res) => {
     try {
-        const response = await keymaster.decrypt(req.body.did);
+        const response = await keymaster.decryptMessage(req.body.did);
         res.json(response);
     } catch (error) {
         res.status(500).send({ error: error.toString() });
